--- a/src/app/pages/bots/overview/overview.component.html
+++ b/src/app/pages/bots/overview/overview.component.html
@@ -11,6 +11,16 @@
   </div>
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
+      title="Put"
+      subtitle="Short"
+      type="info"
+      pictureUrl="../../../../assets/images/geoffrey-flat.svg"
+      description="Prepare for crash landing."
+      [routerLink]="['../put']"
+    ></ngx-bot-profile>
+  </div>
+  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+    <ngx-bot-profile
       title="Bruno"
       subtitle="Bargain"
       type="primary"
@@ -19,7 +29,7 @@
       [routerLink]="['../bruno']"
     ></ngx-bot-profile>
   </div>
-  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+  <!-- <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
       title="Geoffrey"
       subtitle="Safety"
@@ -28,7 +38,7 @@
       description="Prevents investments from losing."
       [routerLink]="['../geoffrey']"
     ></ngx-bot-profile>
-  </div>
+  </div> -->
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
       title="Dot"
