--- a/src/app/pages/subscriptions/subscriptions.component.html
+++ b/src/app/pages/subscriptions/subscriptions.component.html
@@ -161,7 +161,7 @@
           </nb-card-footer>
         </nb-card>
       </div>
-      <div class="col-xxxl-3 col-xxl-4 col-md-6">
+      <!-- <div class="col-xxxl-3 col-xxl-4 col-md-6">
         <nb-card class="card-in-card">
           <nb-card-header>
             Rocket Bot Extended
@@ -174,7 +174,7 @@
             <span *ngIf="isRocketBotExtendedHours" class="text-success"><i class="nb-checkmark"></i> Subscribed</span>
           </nb-card-footer>
         </nb-card>
-      </div>
+      </div> -->
       <div class="col-xxxl-3 col-xxl-4 col-md-6">
         <nb-card class="card-in-card">
           <nb-card-header>
