--- a/src/app/pages/bots/put/put.component.html
+++ b/src/app/pages/bots/put/put.component.html
@@ -50,15 +50,12 @@
       <nb-card-body>
         <div *ngIf="!user">Email me when a put is spotted.</div>
         <div *ngIf="user&&user.email">{{user.email}} <span (click)="changeEmail()"
-                                                           class="pull-right text-info">change</span></div>
-      </nb-card-body>
-      <nb-card-footer>
-        <span class="pull-right">$2/mo</span>
-        <span *ngIf="!isSmsSubscribed()">
-        <br><br>*Turning on this switch starts your free one month trial.
-          </span>
-      </nb-card-footer>
-    </nb-card>
+          class="pull-right text-info">change</span></div>
+</nb-card-body>
+<nb-card-footer>
+<span class="pull-right">FREE</span>
+</nb-card-footer>
+</nb-card>
     <nb-card>
       <nb-card-header>
         Put SMS
@@ -89,7 +86,7 @@
         </div>
       </nb-card-body>
       <nb-card-footer>
-        <span class="pull-right">$5/mo</span>
+        <span class="pull-right">$3/mo</span>
         <span *ngIf="!isSmsSubscribed()">
         <br><br>*Turning on this switch starts your free one month trial.
           </span>
