Add facebook plugin.

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
   </nb-card-body>
 </nb-card>
 
-
+<div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/FreeStockMarket/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/FreeStockMarket/">Free Stock Market Community</a></blockquote></div>
 <!--<div class="row">-->
   <!--<div class="col-sm-12">-->
     <!--<ngx-investments [user]="user"></ngx-investments>-->
