Style facebook plugin.

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -19,23 +19,33 @@
     </ngx-status-card>
   </div>
 </div>
-
-<nb-card>
-  <nb-card-header>
-    About
-  </nb-card-header>
-  <nb-card-body>
-    FreeStock is a collection of bots that manage your Robinhood portfolio. Create strategies and let the bots do the work.
-  </nb-card-body>
-</nb-card>
-
-<div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/FreeStockMarket/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/FreeStockMarket/">Free Stock Market Community</a></blockquote></div>
-<!--<div class="row">-->
-  <!--<div class="col-sm-12">-->
-    <!--<ngx-investments [user]="user"></ngx-investments>-->
-  <!--</div>-->
-<!--</div>-->
-
+<div class="row">
+  <div class="col-xxl-4 col-md-6">
+    <nb-card>
+      <nb-card-header>
+        About
+      </nb-card-header>
+      <nb-card-body>
+        FreeStock is a collection of bots that manage your Robinhood portfolio. Create strategies and let the bots do the work.
+      </nb-card-body>
+    </nb-card>
+  </div>
+  <div class="col-xxl-4 col-md-6">
+    <nb-card>
+      <nb-card-header>
+        Community
+      </nb-card-header>
+      <nb-card-body>
+        <div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket" data-tabs="timeline" data-small-header="false"
+          data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+          <blockquote cite="https://www.facebook.com/FreeStockMarket" class="fb-xfbml-parse-ignore">
+            <a href="https://www.facebook.com/FreeStockMarket">Free Stock Market Community</a>
+          </blockquote>
+        </div>
+      </nb-card-body>
+    </nb-card>
+  </div>
+</div>
 <!--<div class="row">-->
 <!--<div class="col-md-6">-->
 <!--<search></search>-->
