Add like buttons to pages.

--- a/src/app/pages/bots/put/put.component.html
+++ b/src/app/pages/bots/put/put.component.html
@@ -3,6 +3,7 @@
     <nb-card>
       <nb-card-header>
         Put Options
+        <div class="fb-like pull-right" data-href="https://freestock.market/#/bots/put" data-layout="button" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div>
       </nb-card-header>
       <nb-card-body>
         <sub>These stocks have launched up to the moon and are ready for a crash landing.</sub>
