--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -3,7 +3,8 @@
     <nb-card>
       <nb-card-header>
         Rocket Stocks
-      </nb-card-header>
+        <div class="fb-like pull-right" data-href="https://freestock.market/#/bots/rocket" data-layout="button" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div>
+        </nb-card-header>
       <nb-card-body>
         <sub>These uptrending stocks are showing strange fluctuations in volume. The technicals are good. Buckle up;
           we are go for launch.</sub>
