--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -36,10 +36,10 @@
         Community
       </nb-card-header>
       <nb-card-body>
-        <div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket" data-tabs="timeline" data-small-header="false"
-          data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+        <div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket" data-tabs="timeline,messages" data-small-header="false"
+          data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" hide-cta="true">
           <blockquote cite="https://www.facebook.com/FreeStockMarket" class="fb-xfbml-parse-ignore">
-            <a href="https://www.facebook.com/FreeStockMarket">Free Stock Market Community</a>
+            <a href="https://www.facebook.com/FreeStockMarket">Free Stock Market</a>
           </blockquote>
         </div>
       </nb-card-body>
