--- a/src/app/pages/bots/bruno/bruno.component.html
+++ b/src/app/pages/bots/bruno/bruno.component.html
@@ -3,6 +3,7 @@
     <nb-card>
       <nb-card-header>
         Bargain Bin
+        <div class="fb-like pull-right" data-href="https://freestock.market/#/bots/bruno" data-layout="button" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div>
       </nb-card-header>
       <nb-card-body>
         <sub>Good stocks having a bad day.</sub>
