Adds Swing bot.

--- a/src/app/pages/bots/overview/overview.component.html
+++ b/src/app/pages/bots/overview/overview.component.html
@@ -41,12 +41,12 @@
   </div> -->
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
-      title="Dot"
+      title="Swing"
       subtitle="Profit"
       type="success"
-      pictureUrl="../../../../assets/images/dot-flat.svg"
+      pictureUrl="../../../../assets/images/swing-flat.svg"
       description="Sells stocks at their peak."
-      [routerLink]="['../dot']"
+      [routerLink]="['../swing']"
     ></ngx-bot-profile>
   </div>
 </div>
