--- a/src/app/pages/bots/swing/swing.component.html
+++ b/src/app/pages/bots/swing/swing.component.html
@@ -6,8 +6,10 @@
     <h2>Try these demos</h2>
     <button class="btn btn-primary" (click)="changeRoute('MU')">MU</button>
     <button class="btn btn-warning" (click)="changeRoute('NFLX')">NFLX</button>
-    <button class="btn btn-success" (click)="changeRoute('BTC-USD')">BTC-USD</button>
-    <button class="btn btn-info" (click)="changeRoute('ETH-USD')">ETH-USD</button>
+    <button class="btn btn-success" (click)="changeRoute('NVDA')">NVDA</button>
+    <button class="btn btn-info" (click)="changeRoute('FB')">FB</button>
+    <!-- <button class="btn btn-success" (click)="changeRoute('BTC-USD')">BTC-USD</button>
+    <button class="btn btn-info" (click)="changeRoute('ETH-USD')">ETH-USD</button> -->
     <button class="btn btn-danger" (click)="changeRoute('RAD')">RAD</button>
     <hr>
     <div>
@@ -24,6 +26,6 @@
           </div>
           </div>
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
-    <ngx-bot-profile title="Dot" subtitle="Profit" type="success" pictureUrl="../../../../assets/images/dot-flat.svg" description="Sells stocks at their peak. Coming soon."></ngx-bot-profile>
+    <ngx-bot-profile title="Swing" subtitle="Profit" type="success" pictureUrl="../../../../assets/images/swing-flat.svg" description="Sells stocks at their peak. Coming soon."></ngx-bot-profile>
   </div>
 </div>
