Add change diffs.

--- a/src/app/pages/bots/swing/swing.component.html
+++ b/src/app/pages/bots/swing/swing.component.html
@@ -8,6 +8,9 @@
     <button class="btn btn-warning" (click)="changeRoute('NFLX')">NFLX</button>
     <button class="btn btn-success" (click)="changeRoute('NVDA')">NVDA</button>
     <button class="btn btn-info" (click)="changeRoute('FB')">FB</button>
+    <button class="btn btn-info" (click)="changeRoute('TSLA')">TSLA</button>
+    <button class="btn btn-info" (click)="changeRoute('FSLR')">FSLR</button>
+    <button class="btn btn-info" (click)="changeRoute('HMNY')">HMNY</button>
     <!-- <button class="btn btn-success" (click)="changeRoute('BTC-USD')">BTC-USD</button>
     <button class="btn btn-info" (click)="changeRoute('ETH-USD')">ETH-USD</button> -->
     <button class="btn btn-danger" (click)="changeRoute('RAD')">RAD</button>
