--- a/src/app/pages/bots/swing/swing.component.html
+++ b/src/app/pages/bots/swing/swing.component.html
@@ -12,6 +12,7 @@
     <button class="btn btn-info" (click)="changeRoute('FSLR')">FSLR</button>
     <button class="btn btn-info" (click)="changeRoute('HMNY')">HMNY</button>
     <button class="btn btn-info" (click)="changeRoute('AXON')">AXON</button>
+    <button class="btn btn-info" (click)="changeRoute('TNDM')">TNDM</button>
     <!-- <button class="btn btn-success" (click)="changeRoute('BTC-USD')">BTC-USD</button>
     <button class="btn btn-info" (click)="changeRoute('ETH-USD')">ETH-USD</button> -->
     <button class="btn btn-danger" (click)="changeRoute('RAD')">RAD</button>
@@ -20,15 +21,12 @@
       Stock: {{symbol}}
     </div>
     <div>
-        Description: {{description}}
-      </div>
-      <div>
-          Std % chg: {{standardPercentChange}}
-        </div>
-        <div>
-            Algo % chg: {{algoPercentChange}}
-          </div>
-          </div>
+      Std % chg: {{standardPercentChange}}
+    </div>
+    <div>
+      Algo % chg: {{algoPercentChange}}
+    </div>
+  </div>
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile title="Swing" subtitle="Profit" type="success" pictureUrl="../../../../assets/images/swing-flat.svg" description="Sells stocks at their peak. Coming soon."></ngx-bot-profile>
   </div>
