--- a/src/app/pages/bots/swing/swing.component.html
+++ b/src/app/pages/bots/swing/swing.component.html
@@ -13,6 +13,7 @@
     <button class="btn btn-info" (click)="changeRoute('HMNY')">HMNY</button>
     <button class="btn btn-info" (click)="changeRoute('AXON')">AXON</button>
     <button class="btn btn-info" (click)="changeRoute('TNDM')">TNDM</button>
+    <button class="btn btn-info" (click)="changeRoute('ENPH')">ENPH</button>
     <!-- <button class="btn btn-success" (click)="changeRoute('BTC-USD')">BTC-USD</button>
     <button class="btn btn-info" (click)="changeRoute('ETH-USD')">ETH-USD</button> -->
     <button class="btn btn-danger" (click)="changeRoute('RAD')">RAD</button>
