Start in cosmic.

--- a/src/app/pages/bots/swing/swing.component.html
+++ b/src/app/pages/bots/swing/swing.component.html
@@ -11,7 +11,7 @@
     <button class="btn btn-info" (click)="changeRoute('TSLA')">TSLA</button>
     <button class="btn btn-info" (click)="changeRoute('FSLR')">FSLR</button>
     <button class="btn btn-info" (click)="changeRoute('HMNY')">HMNY</button>
-    <button class="btn btn-info" (click)="changeRoute('AXON')">AXON</button>
+    <!-- <button class="btn btn-info" (click)="changeRoute('AXON')">AXON</button> -->
     <button class="btn btn-info" (click)="changeRoute('TNDM')">TNDM</button>
     <button class="btn btn-info" (click)="changeRoute('ENPH')">ENPH</button>
     <!-- <button class="btn btn-success" (click)="changeRoute('BTC-USD')">BTC-USD</button>
