Add table to swing bot overview.

--- a/src/app/pages/bots/overview/overview.component.html
+++ b/src/app/pages/bots/overview/overview.component.html
@@ -1,17 +1,17 @@
 <div class="row">
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
-      title="Rocket"
-      subtitle="Growth"
+      title="Rocket Bot"
+      subtitle="YOLO"
       type="warning"
       pictureUrl="../../../../assets/images/rocket-flat.svg"
-      description="Identifies the rocket stocks."
+      description="To the mooooon!"
       [routerLink]="['../rocket']"
     ></ngx-bot-profile>
   </div>
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
-      title="Put"
+      title="Put Bot"
       subtitle="Short"
       type="info"
       pictureUrl="../../../../assets/images/geoffrey-flat.svg"
@@ -21,11 +21,11 @@
   </div>
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
-      title="Bruno"
+      title="Bruno Bot"
       subtitle="Bargain"
       type="primary"
       pictureUrl="../../../../assets/images/bruno-flat.svg"
-      description="Finds the bargain stocks."
+      description="Bargain stocks."
       [routerLink]="['../bruno']"
     ></ngx-bot-profile>
   </div>
@@ -41,11 +41,11 @@
   </div> -->
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
-      title="Swing"
-      subtitle="Profit"
+      title="Swing Bot"
+      subtitle="Trigger"
       type="success"
       pictureUrl="../../../../assets/images/swing-flat.svg"
-      description="Sells stocks at their peak."
+      description="Buy low. Sell high."
       [routerLink]="['../swing']"
     ></ngx-bot-profile>
   </div>
