--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -29,11 +29,11 @@
   </div>
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
-      title="Rocket"
-      subtitle="Growth"
+      title="Rocket Bot"
+      subtitle="YOLO"
       type="warning"
       pictureUrl="../../../../assets/images/rocket-flat.svg"
-      description="The stocks that go to the moooon!"
+      description="To the mooooon!"
     ></ngx-bot-profile>
     <nb-card>
       <nb-card-header>
