--- a/src/app/pages/bots/swing/swing.component.html
+++ b/src/app/pages/bots/swing/swing.component.html
@@ -20,7 +20,7 @@
       </nb-card-header>
       <nb-card-body>
         <sub>Buy and sell triggers based on each stock's historical trends. Connect to Robinhood to atuomatically place orders
-          every day. This bot is not ready and should not be used. Click a symbol for details.</sub>
+          every day. <span style="color:red">This bot is not ready and should not be used.</span> Click a symbol for details.</sub>
         <br>
         <br>
         <ng2-smart-table [settings]="swingBotSettings" [source]="swingBotSource" (userRowSelect)="onUserRowSelect($event)">
