--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -23,17 +23,17 @@
         About
       </nb-card-header>
       <nb-card-body>
-        FreeStock is a collection of bots that manage your Robinhood portfolio. Create strategies and let the bots do the work.
+        FreeStock is a collection of bots that manage your Robinhood portfolio. The bots are mathematical tools and not financial advisers. Do not consider anything here financial advise.
       </nb-card-body>
     </nb-card>
   </div>
   <div class="col-xxl-4 col-md-6">
     <nb-card>
       <nb-card-header>
-        Community
+        Questions? <small>Ask here</small>
       </nb-card-header>
-      <nb-card-body>
-        <div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket" data-tabs="timeline,messages" data-small-header="false"
+      <nb-card-body id='facebook-card'>
+        <div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket" data-tabs="messages,timeline" data-small-header="false"
           data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" hide-cta="true">
           <blockquote cite="https://www.facebook.com/FreeStockMarket" class="fb-xfbml-parse-ignore">
             <a href="https://www.facebook.com/FreeStockMarket">Free Stock Market</a>
