Robinhood on dashboard.

--- a/src/app/pages/bots/swing/swing.component.html
+++ b/src/app/pages/bots/swing/swing.component.html
@@ -19,7 +19,7 @@
           data-size="large" data-show-faces="true" data-share="false"></div>
       </nb-card-header>
       <nb-card-body>
-        <sub>Buy and sell triggers based on each stock's historical trends. Connect to Robinhood to atuomatically place orders
+        <sub>Buy and sell triggers based on each stock's historical trends. Connect to Robinhood to atuomatically place stoploss orders
           every day. <span style="color:red">This bot is not ready and should not be used.</span> Click a symbol for details.</sub>
         <br>
         <br>
