--- a/src/app/pages/subscriptions/subscriptions.component.html
+++ b/src/app/pages/subscriptions/subscriptions.component.html
@@ -74,7 +74,10 @@
             Connect to your Robinhood account.
           </nb-card-body>
           <nb-card-footer>
-            <span class="pull-right">Coming soon</span>
+            <span class="pull-right">Free</span>
+            <button class="btn btn-secondary pull-left" disabled="disabled">
+                Setup Robinhood
+              </button>
           </nb-card-footer>
         </nb-card>
       </div>
