--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -23,25 +23,52 @@
         About
       </nb-card-header>
       <nb-card-body>
-        FreeStock is a collection of bots that manage your Robinhood portfolio. The bots are mathematical tools and not financial advisers. Do not consider anything here financial advise.
+        FreeStock is a collection of bots that manage your Robinhood portfolio. The bots are mathematical tools and not financial
+        advisers. Do not consider anything here financial advise.
+      </nb-card-body>
+    </nb-card>
+  </div>
+   <div class="col-xxl-4 col-md-6">
+    <nb-card *ngIf='!user || (user && !user.isRobinhood)'>
+      <nb-card-header>
+        Robinhood
+      </nb-card-header>
+      <nb-card-body>
+        Connect your Robinhood account for detailed analytics, stoploss automation, and options help.
+      </nb-card-body>
+      <nb-card-footer>
+        <span class="text-info">Robinhood integration coming soon.</span>
+        <button class="btn btn-secondary pull-right" disabled="disabled">
+          Setup Robinhood
+        </button>
+      </nb-card-footer>
+    </nb-card>
+    <nb-card *ngIf='user && user.isRobinhood'>
+      <nb-card-header>
+        Robinhood
+      </nb-card-header>
+      <nb-card-body>
+        Equity: {{user.robinhoodAccount.portfolioBody.equity}}
       </nb-card-body>
     </nb-card>
   </div>
   <div class="col-xxl-4 col-md-6">
-    <nb-card>
-      <nb-card-header>
-        Questions? <small>Ask here</small>
-      </nb-card-header>
-      <nb-card-body id='facebook-card'>
-        <div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket" data-tabs="messages,timeline" data-small-header="false"
-          data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" hide-cta="true">
-          <blockquote cite="https://www.facebook.com/FreeStockMarket" class="fb-xfbml-parse-ignore">
-            <a href="https://www.facebook.com/FreeStockMarket">Free Stock Market</a>
-          </blockquote>
-        </div>
-      </nb-card-body>
-    </nb-card>
-  </div>
+      <nb-card>
+        <nb-card-header>
+          Questions?
+          <small>Ask here</small>
+        </nb-card-header>
+        <nb-card-body id='facebook-card'>
+          <div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket" data-tabs="messages,timeline" data-small-header="false"
+            data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" hide-cta="true">
+            <blockquote cite="https://www.facebook.com/FreeStockMarket" class="fb-xfbml-parse-ignore">
+              <a href="https://www.facebook.com/FreeStockMarket">Free Stock Market</a>
+            </blockquote>
+          </div>
+        </nb-card-body>
+      </nb-card>
+    </div>
+   
 </div>
 <!--<div class="row">-->
 <!--<div class="col-md-6">-->
