--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -1,3 +1,11 @@
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="1959816927586032"
+  theme_color="#20cef5"
+  logged_in_greeting="Hey there. I can answer your questions."
+  logged_out_greeting="Hey there. I can answer your questions.">
+</div>
 <div class="row">
   <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
     <nb-card>
