--- a/src/app/pages/bots/swing/swing.component.html
+++ b/src/app/pages/bots/swing/swing.component.html
@@ -16,8 +16,8 @@
       <nb-card-header>
         Swing Targets
         <div class="fb-like pull-right" data-href="https://freestock.market/#/bots/swing" data-layout="button" data-action="like"
-          data-size="large" data-show-faces="true" data-share="false"></div>
-      </nb-card-header>
+          data-size="small" data-show-faces="true" data-share="false"></div>
+       </nb-card-header>
       <nb-card-body>
         <sub>Buy and sell triggers based on each stock's historical trends. Connect to Robinhood to atuomatically place stoploss orders
           every day. <span style="color:red">This bot is not ready and should not be used.</span> Click a symbol for details.</sub>
