--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -55,11 +55,10 @@
   <div class="col-xxl-4 col-md-6">
       <nb-card>
         <nb-card-header>
-          Questions?
-          <small>Ask here</small>
-        </nb-card-header>
+          Community
+         </nb-card-header>
         <nb-card-body id='facebook-card'>
-          <div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket" data-tabs="messages,timeline" data-small-header="false"
+          <div class="fb-page" data-href="https://www.facebook.com/FreeStockMarket" data-tabs="timeline,messages" data-small-header="false"
             data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" hide-cta="true">
             <blockquote cite="https://www.facebook.com/FreeStockMarket" class="fb-xfbml-parse-ignore">
               <a href="https://www.facebook.com/FreeStockMarket">Free Stock Market</a>
