--- a/src/app/pages/bots/rocket/rocket.component.scss
+++ b/src/app/pages/bots/rocket/rocket.component.scss
@@ -4,6 +4,11 @@
 @import '~@nebular/theme/styles/global/bootstrap/breakpoints';
 
 @include nb-install-component() {
+
+  ._j68{
+    background-color: #fc0;
+  }
+  
   .switch-container {
     display: flex;
     flex-direction: column;
