--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -8,18 +8,20 @@
   <ngx-theme-switcher></ngx-theme-switcher>
 </div>
 
-<nb-actions
-  size="medium"
-  class="header-container"
-  [class.right]="position === 'normal'"
-  [class.left]="position === 'inverse'">
-  <nb-action icon="nb-grid-b" class="toggle-layout" (click)="toggleSettings()"></nb-action>
-  <nb-action *ngIf="username">
-    <nb-user [nbContextMenu]="userMenu" [name]="username" [picture]="profilePicture"></nb-user>
-  </nb-action>
-  <nb-action *ngIf="!username">
-    <nb-user [name]="'Login'" [picture]="'https://cdn2.iconfinder.com/data/icons/rcons-user/32/male-circle-512.png'" (click)="login()"></nb-user>
-  </nb-action>
-  <nb-action class="control-item" disabled icon="nb-notifications"></nb-action>
-  <nb-action class="control-item" icon="nb-search" (click)="search()"></nb-action>
-</nb-actions>
+<div class="header-container">
+  <nb-actions
+    size="medium"
+    [class.right]="position === 'normal'"
+    [class.left]="position === 'inverse'">
+    <nb-action icon="nb-gear" class="toggle-layout" (click)="toggleSettings()"></nb-action>
+    <nb-action *ngIf="username">
+      <nb-user [nbContextMenu]="userMenu" [name]="username" [picture]="profilePicture"></nb-user>
+    </nb-action>
+    <nb-action *ngIf="!username">
+      <nb-user [name]="'Login'" [picture]="'https://cdn2.iconfinder.com/data/icons/rcons-user/32/male-circle-512.png'" (click)="login()"></nb-user>
+    </nb-action>
+    <nb-action class="control-item" disabled icon="nb-notifications"></nb-action>
+    <nb-action class="control-item" disabled icon="nb-email"></nb-action>
+    <nb-action class="control-item" icon="nb-search" (click)="search()"></nb-action>
+  </nb-actions>
+</div>
