--- a/src/app/pages/e-commerce/e-commerce.component.html
+++ b/src/app/pages/e-commerce/e-commerce.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-xxl-5">
     <div class="row">
       <div class="col-md-6">
@@ -35,5 +35,6 @@
   <div class="col-xxl-3">
     <ngx-user-activity></ngx-user-activity>
   </div>
-</div>
+</div> -->
 
+Under construction. Something savage coming soon.
