--- a/src/app/pages/e-commerce/e-commerce.component.html
+++ b/src/app/pages/e-commerce/e-commerce.component.html
@@ -69,7 +69,7 @@
     </div> -->
    
 </div>
-<div class="row">
+<!-- <div class="row">
   <div class="col-xxl-5">
     <div class="row">
       <div class="col-md-6">
@@ -108,4 +108,4 @@
   </div>
 </div>
 
-Under construction. Something savage coming soon.
+Under construction. Something savage coming soon. -->
